crates/ruff_python_parser/src/lalrpop/snapshots/ruff_python_parser__lalrpop__context__tests__ann_assign_name.snap
---
source: crates/ruff_python_parser/src/lalrpop/context.rs
expression: parse_ast
---
[
    AnnAssign(
        StmtAnnAssign {
            range: 0..10,
            target: Name(
                ExprName {
                    range: 0..1,
                    id: "x",
                    ctx: Store,
                },
            ),
            annotation: Name(
                ExprName {
                    range: 3..6,
                    id: "int",
                    ctx: Load,
                },
            ),
            value: Some(
                NumberLiteral(
                    ExprNumberLiteral {
                        range: 9..10,
                        value: Int(
                            1,
                        ),
                    },
                ),
            ),
            simple: true,
        },
    ),
]
