crates/ruff_python_parser/src/lalrpop/snapshots/ruff_python_parser__lalrpop__context__tests__assign_attribute.snap
---
source: crates/ruff_python_parser/src/lalrpop/context.rs
expression: parse_ast
---
[
    Assign(
        StmtAssign {
            range: 0..15,
            targets: [
                Attribute(
                    ExprAttribute {
                        range: 0..3,
                        value: Name(
                            ExprName {
                                range: 0..1,
                                id: "x",
                                ctx: Load,
                            },
                        ),
                        attr: Identifier {
                            id: "y",
                            range: 2..3,
                        },
                        ctx: Store,
                    },
                ),
            ],
            value: Tuple(
                ExprTuple {
                    range: 6..15,
                    elts: [
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 7..8,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 10..11,
                                value: Int(
                                    2,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 13..14,
                                value: Int(
                                    3,
                                ),
                            },
                        ),
                    ],
                    ctx: Load,
                    parenthesized: true,
                },
            ),
        },
    ),
]
