crates/ruff_python_parser/src/lalrpop/snapshots/ruff_python_parser__lalrpop__context__tests__assign_list.snap
---
source: crates/ruff_python_parser/src/lalrpop/context.rs
expression: parse_ast
---
[
    Assign(
        StmtAssign {
            range: 0..18,
            targets: [
                List(
                    ExprList {
                        range: 0..6,
                        elts: [
                            Name(
                                ExprName {
                                    range: 1..2,
                                    id: "x",
                                    ctx: Store,
                                },
                            ),
                            Name(
                                ExprName {
                                    range: 4..5,
                                    id: "y",
                                    ctx: Store,
                                },
                            ),
                        ],
                        ctx: Store,
                    },
                ),
            ],
            value: Tuple(
                ExprTuple {
                    range: 9..18,
                    elts: [
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 10..11,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 13..14,
                                value: Int(
                                    2,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 16..17,
                                value: Int(
                                    3,
                                ),
                            },
                        ),
                    ],
                    ctx: Load,
                    parenthesized: true,
                },
            ),
        },
    ),
]
